--- a/Google_Keep/Google_Keep.csproj
+++ b/Google_Keep/Google_Keep.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1"/>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="NSuperTest" Version="0.1.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
