--- a/Google_Keep/appsettings.json
+++ b/Google_Keep/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Google_KeepContext": "Server=(localdb)\\mssqllocaldb;Database=Google_KeepContext-82a4450f-69e9-4688-b3e5-45781abe4020;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Google_KeepContext": "Server=db;Database=master;User=sa;Password=Your_password123;"
   }
 }
