added testing condition

--- a/Google_Keep/appsettings.json
+++ b/Google_Keep/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Google_KeepContext": "Server=db;Database=master;User=sa;Password=Your_password123;"
+    "Google_KeepContext": "Server=db;Database=Google_KeepContext;User=sa;Password=Your_password123;"
   }
 }
