--- a/Google_Keep/appsettings.json
+++ b/Google_Keep/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoConnection": {
+    "ConnectionString": "mongodb://admin:abc123!@localhost",
+    "Database": "NotesDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
